# WordModel

./: .gitignore  CMakeLists.txt  README  README.md  TODO
doc/: CMakeLists.txt  Doxyfile.in
include/: bounded_context_tree_model.hpp  brown_word_model.hpp  contex_tree.hpp  context_tree.hpp  model_multiplexer.hpp  parser.hpp  regularizer.hpp  simple_model.hpp  tokenizer.hpp  word_model.hpp
lib/: CMakeLists.txt  bounded_context_tree_model.cpp  brown_word_model.cpp  parser.cpp  simple_model.cpp
nodejs/: local_client.html  local_client.js  model_adaptor.js  packet.js  socket_server.js
src/: CMakeLists.txt  echo_server.cpp  model_server.cpp  model_server.hpp  packet.hpp  service_client.hpp  stdin_tcp.cpp
tests/: CMakeLists.txt  async_test.cpp  hello_world_ref.dot  word_model_test.cpp
